--- a/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
+++ b/src/app/main/contract/form-contract/party-contract-form/party-contract-form.component.html
@@ -4,7 +4,7 @@
       <div class="contract__content--title-doi-tac">
         <input id="order-organization" class="contract-total index-input" type="number"
         [(ngModel)]="data_organization.ordering" (focusout)="onChangeValue($event, 'order-organization')"
-        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
+        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);" />
 
         <div class="organization-me">{{ "organization.me" | translate }}&nbsp;<span style="color: red">*</span>
         </div>
@@ -34,7 +34,7 @@
                   <input [id]="'ordering-organzation-view-' + index" class="contract-total index-input"
                   (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)"
                   type="number" [(ngModel)]="d.ordering"
-                  oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
+                  oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);"
                   [disabled]="getOriganzationReviewer().length == 1 && !isEditOrdering">
 
                   <div class="text-header-user-view">
@@ -310,7 +310,7 @@
                   <input [id]="'ordering-sign-' + index" class="col-md-1 contract-total"
                   (focusout)="onChangeValue($event, 'ordering-sign-' + index)" style="width: 32px; height: 32px"
                   type="number" [(ngModel)]="d.ordering"
-                  oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
+                  oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);"
                   [disabled]="getOriganzationSignature().length == 1 && !isEditOrdering" />
 
                   <div class="text-header-user-view">
@@ -704,7 +704,7 @@
                   <input [id]="'ordering-doc-' + index" class="col-md-1 contract-total"
                   (focusout)="onChangeValue($event, 'ordering-doc-' + index)" style="width: 32px; height: 32px"
                   type="number" [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1 && !isEditOrdering"
-                  oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
+                  oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);" />
 
                   <div class="text-header-user-view">
                     {{ "user.doc" | translate }}<span>&nbsp;{{ index + 1 }}</span>
@@ -976,7 +976,7 @@
         <input [id]="'ordering-partner-' + id" class="contract-total index-input"
         (focusout)="onChangeValue($event, 'ordering-partner-' + id)" style="width: 32px; height: 32px" type="number"
         [(ngModel)]="item.ordering"
-        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
+        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);" />
 
         <div class="organization-me">{{ "doi_tac" | translate }}&nbsp;<span style="color: red">*</span>
         </div>
@@ -1155,8 +1155,8 @@
                     <div class="col-md-6 flex">
                       <input [id]="'ordering-view-' + index" class="col-md-1 contract-total"
                       (focusout)="onChangeValue($event, 'ordering-view-' + index)" style="width: 32px; height: 32px"
-                      type="number" [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1 && !isEditOrdering"
-                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
+                      type="number" [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1 && !isEditOrderingPartner"
+                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);" />
 
                       <div class="text-header-user-view">
                         {{ "user.view" | translate }}<span>&nbsp;{{ index + 1 }}</span>
@@ -1417,8 +1417,8 @@
                       onChangeValue($event, 'ordering-sign-partner-' + index)
                       " class="col-md-1 contract-total" style="width: 32px; height: 32px" type="number"
                       [(ngModel)]="d.ordering"
-                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                      [disabled]="getPartnerSignature(item).length == 1 && !isEditOrdering" />
+                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);"
+                      [disabled]="getPartnerSignature(item).length == 1 && !isEditOrderingPartner" />
 
                       <div class="text-header-user-view">
                         {{ "user.sign" | translate }}<span>&nbsp;{{ index + 1 }}</span>
@@ -1818,8 +1818,8 @@
                       onChangeValue($event, 'ordering-partner-doc-' + index)
                       " class="col-md-1 contract-total" style="width: 32px; height: 32px" type="number"
                       [(ngModel)]="d.ordering"
-                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                      [disabled]="getPartnerDocument(item).length == 1 && !isEditOrdering" />
+                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);"
+                      [disabled]="getPartnerDocument(item).length == 1 && !isEditOrderingPartner" />
 
                       <div class="text-header-user-view">
                         {{ "user.doc" | translate }}<span>&nbsp;{{ index + 1 }}</span>
@@ -2070,8 +2070,8 @@
                     <input [id]="'ordering-sign-partner-' + index" (focusout)="
                       onChangeValue($event, 'ordering-sign-partner-' + index)
                     " class="col-md-1 contract-total" style="width: 32px; height: 32px" type="number"
-                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                    [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1" />
+                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1').slice(0, 5);"
+                    [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1 && !isEditOrderingPersonalPartner" />
 
                     <div class="text-header-user-view">
                       {{ "user.sign" | translate }}<span>&nbsp;{{ index + 1 }}</span>
