--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -869,7 +869,7 @@
 @media (max-width: 991px) {
   .horizontal-dropdown {
     position: absolute;
-    top: 100%;
+    // top: 100%;
     left: 0;
     right: auto;
     margin-top: 95px;
@@ -879,19 +879,30 @@
 
 @media (min-width: 992px) {
   .horizontal-dropdown {
-    right: -270px;
+    right: -233px;
   }
 }
 
+.chu_ky_so_new {
+  position: relative;
+  display: inline-block;
+}
+
 .horizontal-dropdown {
+  display: none;
   list-style: none;
   padding: 0px 16px;
   position: absolute;
-  top: 0%; /* Position it below the span */
   z-index: 1000;
   background: #FFFFFF;
   box-shadow: 0px 3px 12px 0px #1055E11A;
   border-radius: 12px;
+}
+
+.chu_ky_so_new:hover .horizontal-dropdown,
+.imgage-ky:hover .horizontal-dropdown,
+.horizontal-dropdown:hover {
+  display: block;
 }
 
 .item-ky {
