--- a/src/app/main/report/report-soon-expire/report-soon-expire.component.html
+++ b/src/app/main/report/report-soon-expire/report-soon-expire.component.html
@@ -19,7 +19,7 @@
       <div class="col-xxl-2-5 col-lg-4 col-md-6">
         <div>{{'contract.information' | translate}}</div>
         <div class="input-line">
-          <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="{{'search.code.number.name' | translate}}" />
+          <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="{{'folder.search.placeholder' | translate}}" />
         </div>
       </div>
 
