Fix bug body null webhook

--- a/src/app/main/system-config/system-config.component.scss
+++ b/src/app/main/system-config/system-config.component.scss
@@ -143,6 +143,10 @@ span{
   margin-bottom: 10px;
 }
 
+.require_star{
+  color: red;
+}
+
 @media (min-width: 1400px) {
   .col-xxl-6 {
       flex: 0 0 auto;
