--- a/src/app/main/system-config/system-config.component.html
+++ b/src/app/main/system-config/system-config.component.html
@@ -43,7 +43,10 @@
           <div class="row">
             <div class="col-xxl-6">
               <div class="row">
-                <span>API Key</span>
+                <div style="display: flex;">
+                  <span>API Key</span>
+                  <span class="require_star">*</span>
+                </div>
                 <textarea id="apiKey" rows="7" placeholder="{{'example.apikey' | translate}}" (input)="validateApiKey($event)"  maxlength="32" formControlName="apikey"></textarea>
                 <div *ngIf="submitted && f.apikey.errors">
                   <!-- <small class="text-danger" *ngIf="f.apikey.errors['required']">API Key không được phép bỏ trống.</small> -->
@@ -58,7 +61,10 @@
             
             <div class="col-xxl-6">
               <div class="row">
-                <span>Body</span>
+                <div style="display: flex;">
+                  <span>Body</span>
+                  <span style="font-style: italic; color: orange;">({{'webhook.body.sample' | translate}})</span>
+                </div>
                 <textarea id="body" rows="7" formControlName="body" readonly></textarea>
               </div>
             </div>
