--- a/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
+++ b/src/app/main/report/report-status-send-sms-email/report-status-send-sms-email.component.html
@@ -14,7 +14,7 @@
     <div class="col-xxl-3-5 col-lg-6 col-md-6">
       <div>{{'contract.information' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="{{'folder.search.placeholder' | translate}}" />
+        <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="{{'search.code.number.name.1' | translate}}" />
       </div>
     </div>
 
