sửa nhập text quá dài bị đẩy lên --> k cho đẩy lên

--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.scss
@@ -13,6 +13,9 @@
   position: absolute;
   left: 0px;
   bottom: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
 }
 
 .skeleton-sign-value1 {
