--- a/src/app/main/system-config/system-config.component.html
+++ b/src/app/main/system-config/system-config.component.html
@@ -1,4 +1,5 @@
-<div class="horizontal-container" *ngIf="isRoleWebHook && this.checkRole === null">
+<div class="horizontal-container">
+  <div *ngIf="isRoleWebHook && this.checkRole === null">
   <form [formGroup]="addForm">
     <!-- <div formArrayName="apiListFormArray"> -->
       <!-- <div *ngFor="let form of apiListFormArray.controls; let i = index" [formGroupName]="i"> -->
@@ -27,13 +28,23 @@
           
           <div class="row">
             <div class="system-config1">
-              <div class="">
-                <select id="method" class="method">
-                  <option value="POST">POST</option>
-                </select>
-                <input class="input-url btn-padding-right btn-padding-left" type="text" placeholder="Nhập URL" formControlName="url"/>
-                <button class="check" (click)="checkStatusApiWebHook()">Kiểm tra</button>
+              <div class="flex-container">
+                <div class="flex-item method-container">
+                  <select id="method" class="method">
+                    <option value="POST">POST</option>
+                  </select>
+                </div>
+          
+                <div class="flex-item url-container">
+                  <input class="input-url btn-padding-right btn-padding-left" type="text" placeholder="Nhập URL" formControlName="url" />
+                </div>
+          
+                <div class="flex-item check-button-container">
+                  <button class="check" (click)="checkStatusApiWebHook()">Kiểm tra</button>
+                </div>
               </div>
+
+              <!-- </div> -->
               <div *ngIf="submitted && f.url.errors">
                 <small class="text-danger" *ngIf="f.url.errors['required']">URL không được phép bỏ trống</small>
               </div>
@@ -47,7 +58,7 @@
                   <span>API Key</span>
                   <span class="require_star">*</span>
                 </div>
-                <textarea id="apiKey" rows="7" placeholder="{{'example.apikey' | translate}}" (input)="validateApiKey($event)"  maxlength="36" formControlName="apikey"></textarea>
+                <textarea id="apiKey" rows="4" placeholder="{{'example.apikey' | translate}}" (input)="validateApiKey($event)"  maxlength="36" formControlName="apikey"></textarea>
                 <div *ngIf="submitted && f.apikey.errors">
                   <!-- <small class="text-danger" *ngIf="f.apikey.errors['required']">API Key không được phép bỏ trống.</small> -->
                   <!-- <small class="text-danger" *ngIf="f.apikey.errors['pattern']">API Key chỉ được phép chứa ký tự không dấu và không có khoảng trắng</small>
@@ -69,7 +80,7 @@
                   <span>Body</span>
                   <span style="font-style: italic; color: orange;">({{'webhook.body.sample' | translate}})</span>
                 </div>
-                <textarea id="body" rows="7" formControlName="body" readonly></textarea>
+                <textarea id="body" rows="4" formControlName="body" readonly></textarea>
               </div>
             </div>
           </div>
@@ -113,5 +124,6 @@
       </div>
     </div>
   </div>
- 
+
+</div>
 </div>
