--- a/src/app/main/system-config/system-config.component.scss
+++ b/src/app/main/system-config/system-config.component.scss
@@ -8,7 +8,7 @@
 }
 
 .system-config{
-  border: 1px solid #8E9AB0;
+  border: 1px solid #C6D2EA;
   border-radius: 8px;
   margin-top: 20px;
   margin-left: 5px;
@@ -18,22 +18,21 @@
 .system-config1{
   border-radius: 8px;
   margin-top: 20px;
-  margin-left: 5px;
-  margin-right: 10px;
+  display: flex;
 }
 
 .input-url{
-  width: 85%;
+  width: 100%;
   height: 40px;
   border-radius: 8px;
-  border: solid 2px #8E9AB0;
+  border: 1px solid #C6D2EA;
 }
 
 .method{
   height: 40px;
-  width: 5%;
+  width: 100%;
   border-radius: 8px;
-  border: solid 2px #8E9AB0;
+  border: 1px solid #C6D2EA;
 }
 
 u{
@@ -48,22 +47,51 @@ u{
 .check{
   height: 43px;
   font-size: 14px !important;
-  width: 8%;
+  width: 100%;
   border-radius: 8px;
   box-sizing: border-box;
   color: #FFFFFF;
-  background-color: #29a55d;
+  background-color: #0041C4;
   border: solid 1px #FFFFFF;
   font-weight: 700;
-  margin-left: 2%;
+  // margin-left: 2%;
+}
+
+.flex-container {
+  display: flex;
+  align-items: center; /* Căn giữa nội dung theo chiều dọc */
+  width: 100%;
+}
+
+.flex-item {
+  box-sizing: border-box;
+  padding: 0 5px; /* Thêm khoảng cách giữa các phần tử */
+}
+
+.method-container {
+  flex: 1;
+}
+
+.url-container {
+  flex: 10;
+}
+
+.check-button-container {
+  flex: 1;
+  padding-bottom: 10px;
+  margin-right: -10px;
+}
+.dropdown-container{
+  padding: 0px 20px 0px 13px;
 }
 
 input, textarea, select {
   width: 97%;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
+  // border: 1px solid #ccc;
   border-radius: 8px;
+  border: 1px solid #C6D2EA;
 }
 
 #apiKey{
@@ -117,7 +145,7 @@ span{
   border-radius: 8px;
   box-sizing: border-box;
   color: #FFFFFF;
-  background-color: #29a55d;
+  background-color: #0041C4;
   border: solid 1px #FFFFFF;
   font-weight: 700;
   margin: 5px;
@@ -130,7 +158,7 @@ span{
   border-radius: 8px;
   box-sizing: border-box;
   color: #FFFFFF;
-  background-color: #29a55d;
+  background-color: #0041C4;
   border: solid 1px #FFFFFF;
   font-weight: 700;
   margin: 10px;
@@ -257,7 +285,7 @@ span{
   }
 
   .p-dropdown {
-    border: 1px solid #106DB6;
+    border: 1px solid #C6D2EA;
     border-radius: 5px;
     height: 35px;
     width: 100%;
